--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -33,7 +33,7 @@
     background-attachment: fixed;
  }
 
- @media screen and (max-width: 640px) {
+ @media screen and (max-width: 770px) {
 
     .header {
         height: 75vh;
@@ -64,13 +64,13 @@
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); */
         background-attachment: fixed;
      }
-     .card {
-        margin-top: 100px;
+    .card {
+        margin-bottom: 100px !important;
+        align-content: center;
     }
-    .card1 {
-        margin-top: 200px;
+    .card__heading {
+        font-size: 0.9em;
     }
-
 
  }
 
@@ -209,7 +209,7 @@
 }
 
 .card__picture--1 {
-    background-image: linear-gradient(to right bottom, rgb(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/burger_filt.jpg);
+    background-image: linear-gradient(to right bottom, rgb(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/fam_filt.jpg);
 }
 
 .card__picture--2 {
@@ -221,11 +221,11 @@
 }
 
 .card__picture--4 {
-    background-image: linear-gradient(to right bottom, rgb(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/wordGuess_filt.jpg);
+    background-image: linear-gradient(to right bottom, rgb(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/burger_filt.jpg);
 }
 
 .card__picture--5 {
-    background-image: linear-gradient(to right bottom, rgb(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/crystal_filt.jpg);
+    background-image: linear-gradient(to right bottom, rgb(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/wordGuess_filt.jpg);
 }
 
 .card__picture--6 {
@@ -256,7 +256,7 @@
 }
 
 .card__heading {
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     color: white;
     /* font-family: 'Pacifico', cursive; */
     text-transform: uppercase;
@@ -264,13 +264,15 @@
     position: absolute;
     top: 13rem;
     right: 1.3rem;
-    width: 65%;
+    width: 90%;
+    margin-bottom: 10em;
 }
 
 .card__heading-span {
-    padding: .45rem 1.5rem;
+    padding: .15rem 1.5rem;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
+    
 }
 
 .card__heading-span--1 {
